@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-10T16:34:16Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2022-08-11T01:57:38Z",
+  "count" : 6,
+  "count_minmax" : [ 5, 6 ],
+  "count_decinc" : [ -0, +6 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 4, 5 ],
+  "uniques_decinc" : [ -0, +5 ]
 }
