@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T16:34:16Z",
-  "count_outdated" : 409,
-  "uniques_outdated" : 255,
-  "count" : 432,
-  "uniques" : 273,
+  "timestamp" : "2022-08-11T01:57:38Z",
+  "count_outdated" : 411,
+  "uniques_outdated" : 256,
+  "count" : 434,
+  "uniques" : 274,
   "clones" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
@@ -63,10 +56,10 @@
     },
     {
       "timestamp": "2022-08-10T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
+      "count": 6,
+      "count_minmax": [ 5, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ]
     }
   ]
 }
