@@ -1,12 +1,7 @@
 {
   "count": 23,
-  "uniques": 12,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
@@ -44,8 +39,8 @@
     },
     {
       "timestamp": "2022-08-10T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
